tests/semantic/fail/ptrdiff1.c
int main(void) {
  int i;
  &i - main;
  return 0;
}
